added human detection functionality

--- a/static/home.css
+++ b/static/home.css
@@ -1,45 +1,58 @@
 #cli{
-	position: absolute;
-	top: 7px;
-	left: 528px;
-	width: 455px;
-	height: 40px;
-	font-family: "Tahoma";
-	border-color: #008725;
-	outline: none;
-	border-style: solid;
+        position: absolute;
+        top: 7px;
+        left: 528px;
+        width: 455px;
+        height: 40px;
+        font-family: "Tahoma";
+        border-color: #008725;
+        outline: none;
+        border-style: solid;
 }
 
 #out{
-	position: absolute;
-	top: 55px;
-	left: 528px;
-	font-family: "Tahoma";
+        position: absolute;
+        top: 55px;
+        left: 528px;
+        font-family: "Tahoma";
 }
 
 #sub{
-	position: absolute;
-	top: 8px;
-	left: 925px;
+        position: absolute;
+        top: 8px;
+        left: 925px;
 }
 
 #live{
-	position: absolute;
-	height:40px;
-	width: 90px;
-	left: 422px;
-	top: 8px;
+        position: absolute;
+        height:40px;
+        width: 90px;
+        left: 422px;
+        top: 8px;
 }
 
 #stream{
-	position: absolute;
-	top: 6px;
+        position: absolute;
+        top: 6px;
 }
 
 #snap{
-	position: absolute;
-	top: 358px;
-	left: 8px;
-	height: 24px;
-	width: 40px;
+        position: absolute;
+        top: 358px;
+        left: 8px;
+        height: 24px;
+        width: 40px;
 }
+
+#ch{
+        position: absolute;
+        top: 405px;
+        left: 220px;
+}
+
+#hd{
+        position: absolute;
+        top: 397.5px;
+        left: 234px;
+}
+
